added content plan

--- a/Report_data/Report.html
+++ b/Report_data/Report.html
@@ -10,12 +10,18 @@
   </head>
   <body>
     <h1> FASTQC-like Report </h1>
-    <hr>
-
     <p>
-      Generated at 18/11/21  12:26:47.
+      Generated at 18/11/21  18:27:40.
     </p>
     
+    <hr>
+
+    <ol>
+      <li><a href="#part_1">Part 1</a></li>
+      <li><a href="#part_2">Psrt 2</a></li>
+    </ol>
+
+
     <table style="width: 100%;">
     <tbody>
       <TR>
@@ -42,7 +48,7 @@
     </table>
     <hr>
 
-    <h2> Per Base Sequence Quality </h2>
+    <h2><a id="part_1"> Per Base Sequence Quality </a></h2>
     <img src="./Per_base_sequence_quality.png">
     <hr>
 
